修改面试题

--- a/面试题/真题题目大杂烩.md
+++ b/面试题/真题题目大杂烩.md
@@ -1148,3 +1148,209 @@ Expires 是 HTTP/1 的产物，表示资源会在 Wed, 22 Oct 2018 08:41:00 GMT 
 
 如果是短暂白屏，那就是加载性能问起。那么打开F12，查看NetWork，看瀑布图，是哪些文件加载时间过久。我们针对这些文件进行一些处理，比如说CDN外部加载、压缩等等。
 
+#### 介绍一下事件冒泡和捕获
+
+**事件冒泡**是指，事件会从最内层的元素开始发生，一直向上传播，直到document对象。
+
+而**事件捕获**与事件冒泡相反，事件会从最外层开始发生，直到最具体的元素。
+
+在进行项目开发的时候，我们可以自行选择事件处理函数在哪一个阶段被调用。addEventListener方法用来素绑定事件处理的函数，它的第三个参数允许我们设置为捕获阶段或冒泡阶段触发。
+
+**事件冒泡和事件捕获过程图：**
+
+![img](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/16a2654b0dd928ef)
+
+1-5是捕获过程，5-6是目标阶段，6-10是冒泡阶段；
+
+#### 事件代理/委托
+
+事件代理是将事件监听函数加到父元素上，借助事件冒泡机制来处理数目不定的子元素相同事件的方式。因为在事件冒泡中，子元素的事件触发会冒泡到父元素中，触发父元素相同的事件。若需要给多个子元素添加事件监听，我们只需给父元素添加事件监听即可。
+
+如果我们不使用事件代理，那需要遍历父元素下的子元素，挨个进行事件监听。当元素量很大的时候，会影响页面性能。
+
+```
+事件流：事件发生顺序
+```
+
+#### 事件代理/委托有什么作用，主要用于哪些场景
+
+事件代理的主要用处：
+
+1.可以将多个事件处理函数减为一个，并且对于不同的元素可以有不同的处理方法。我们不必循环给每一个元素绑定事件，只需给父元素添加事件监听即可。
+
+应用场景：
+
+- 当要给一组子元素添加相同事件时，可以直接添加给父元素。
+
+最经典的应用就是，一个列表会不断有新的数据的添加，如果每添加一个数据就生成一个li，就需要添加一个新的监听，代码结构就特别不好，这时候使用事件代理就很方便。
+
+具体的例子，就比如，很多商品放在一个ul下面的li标签里面，里面有添加、删除、修改商品按钮，这时候我们就可以绑定这些商品的父元素ul标签，通过事件代理去找到要点击的商品，进行不同的函数处理。
+
+>- 如何对于不同的元素可以有不同的处理方法
+
+#### 如何对于不同的元素可以有不同的处理方法
+
+通过判断event.target.nodeName来检查元素类型，根据元素类型执行不同的代码，即可实现不同的处理。
+
+#### 阻止事件冒泡
+
+- 给子级加 event.stopPropagation( )
+
+- 在事件处理函数中返回 false
+
+#### 阻止默认事件
+
+- event.preventDefault( )
+
+- return false
+
+#### js怎么实现继承
+
+**一、原型链继承**
+
+将父类的实例作为子类的原型，这样根据原型链，子类就可以访问到父类的属性和方法。
+
+```js
+function Parent() {
+   this.isShow = true
+   this.info = {
+       name: "yhd",
+       age: 18,
+   };
+}
+
+Parent.prototype.getInfo = function() {
+   console.log(this.info);
+   console.log(this.isShow); // true
+}
+
+function Child() {};
+Child.prototype = new Parent();
+
+let Child1 = new Child();
+Child1.info.gender = "男";
+Child1.getInfo();  // {name: "yhd", age: 18, gender: "男"}
+
+let child2 = new Child();
+child2.getInfo();  // {name: "yhd", age: 18, gender: "男"}
+child2.isShow = false
+
+console.log(child2.isShow); // false
+
+```
+
+**优点：**
+
+> 1、父类方法可以复用
+
+**缺点：**
+
+> 1. 父类的所有`引用属性`（info）会被所有子类共享，更改一个子类的引用属性，其他子类也会受影响
+> 2. 子类型实例不能给父类型构造函数传参
+
+**二、构造函数继承**
+
+ 通过使用`call()`或`apply()`方法，`Parent`构造函数在为`Child`的实例创建的新对象的上下文执行了，就相当于新的`Child`实例对象上运行了`Parent()`函数中的所有初始化代码，结果就是每个实例都有自己的`info`属性。
+
+```js
+function Parent() {
+  this.info = {
+    name: "yhd",
+    age: 19,
+  }
+}
+
+function Child() {
+    Parent.call(this)
+}
+
+let child1 = new Child();
+child1.info.gender = "男";
+console.log(child1.info); // {name: "yhd", age: 19, gender: "男"};
+
+let child2 = new Child();
+console.log(child2.info); // {name: "yhd", age: 19}
+
+```
+
+相比于原型链继承，构造函数继承可以给父类构造函数传参。
+
+```js
+function Parent(name) {
+    this.info = { name: name };
+}
+function Child(name) {
+    //继承自Parent，并传参
+    Parent.call(this, name);
+    
+     //实例属性
+    this.age = 18
+}
+
+let child1 = new Child("yhd");
+console.log(child1.info.name); // "yhd"
+console.log(child1.age); // 18
+
+let child2 = new Child("wxb");
+console.log(child2.info.name); // "wxb"
+console.log(child2.age); // 18
+
+```
+
+**优点:**
+
+> 1. 可以在子类构造函数中向父类传参数
+> 2. 父类的引用属性不会被共享
+
+**缺点：**
+
+> 1. 子类不能访问父类原型上的方法（即不能访问Parent.prototype上定义的方法），因此所有方法属性都写在构造函数中，每次创建实例都会初始化
+
+**三、组合继承**
+
+组合继承综合了原型链继承和构造函数继承，将两者的优点结合了起来。
+
+基本的思路就是使用原型链继承原型上的属性和方法，而通过构造函数继承实例属性，这样既可以把方法定义在原型上以实现重用，又可以让每个实例都有自己的属性
+
+```javascript
+function Parent(name) {
+   this.name = name
+   this.colors = ["red", "blue", "yellow"]
+}
+Parent.prototype.sayName = function () {
+   console.log(this.name);
+}
+
+function Child(name, age) {
+   // 继承父类属性
+   Parent.call(this, name)
+   this.age = age;
+}
+// 继承父类方法
+Child.prototype = new Parent();
+
+Child.prototype.sayAge = function () {
+   console.log(this.age);
+}
+
+let child1 = new Child("yhd", 19);
+child1.colors.push("pink");
+console.log(child1.colors); // ["red", "blue", "yellow", "pink"]
+child1.sayAge(); // 19
+child1.sayName(); // "yhd"
+
+let child2 = new Child("wxb", 30);
+console.log(child2.colors);  // ["red", "blue", "yellow"]
+child2.sayAge(); // 30
+child2.sayName(); // "wxb"
+
+复制代码
+```
+
+​     **优点：**
+
+> 1. 父类的方法可以复用
+> 2. 可以在Child构造函数中向Parent构造函数中传参
+> 3. 父类构造函数中的引用属性不会被共享
+
+
