--- a/面试题/高频考点.md
+++ b/面试题/高频考点.md
@@ -235,6 +235,10 @@ BFC （Block Formatting Context） 是**块级格式化上下文**，是**Web页
 
 **K**
 
+### 详细说说flex怎么实现居中
+
+首先Flex布局，他是有主轴和侧轴两个方向，flex可以实现两个方向的居中，水平居中和垂直居中。在主侧轴默认的情况下，水平居中只需要在容器上设置justify-content:center，垂直居中只需要在容器上设置aligin-items:center即可。
+
 ### 7.介绍一下css盒模型
 
 ```
