对图片的一些修改

--- a/面试题/真题题目大杂烩.md
+++ b/面试题/真题题目大杂烩.md
@@ -812,6 +812,12 @@ async函数里面await标记之前的语句和 await 后面的语句是同步执
 
 顺序执行宏任务，当宏任务的JS堆栈清空之后，执行微任务。微任务清空即为一个宏任务的完成，接着执行另一个宏任务。
 
+#### JS的执行机制
+
+所有同步任务都在主线程上执行, 形成一个执行栈(stack)。所有的异步任务，不进入主线程、而进入"任务队列"，异步任务有setTimeout SetInterval等等，等待同步任务执行完毕之后，轮询执行异步任务队列中的任务。
+
+除了同步任务、异步任务，还有宏任务和微任务，宏任务队列等同于
+
 #### 手写call 、apply 、bind方法
 
 **实现call方法思路**
@@ -1100,7 +1106,7 @@ commons-chunk-plugin是用来提取不同chunk的公共代码。webpack打包的
 name、hash都是变量，所以放在[]里
 ```
 
-#### ？？？？？？你可以跟我讲述一下HTTP的缓存机制吗？
+#### 你可以跟我讲述一下HTTP的缓存机制吗？
 
 HTTP的缓存缓分为强制缓存和协商缓存。
 
@@ -1582,24 +1588,7 @@ this.$store.commit("modulec/change");
 this.$store.dispatch("modulec/actiontext");
 ```
 
-#### 在v-model上怎么用Vuex中state的值？
 
-需要通过computed计算属性来转换。
-
-```
-<input v-model="message">
-// ...
-computed: {
-    message: {
-        get () {
-            return this.$store.state.message
-        },
-        set (value) {
-            this.$store.commit('updateMessage', value)
-        }
-    }
-}
-```
 
 #### 知道哪些设计模式？具体的使用场景？
 
@@ -1635,7 +1624,7 @@ console.log(obj1 === obj2); // true
 
 定义对象间的一种一对多的依赖关系，一个对象（Subject）维持一系列依赖于它的Observer对象，当有关状态发生变更时这个对象则通知一系列 Observer 对象进行更新。
 
-
+#### 
 
 应用场景：JS事件、Vue watch等
 
@@ -1648,3 +1637,67 @@ console.log(obj1 === obj2); // true
 观察者模式与发布订阅模式都是定义了一个一对多的依赖关系，当有关状态发生变更时则执行相应的更新。
 
 不同的是，在观察者模式中依赖于 Subject 对象的一系列 Observer 对象在被通知之后只能执行同一个特定的更新方法，而在发布订阅模式中则可以基于不同的主题去执行不同的自定义事件。相对而言，发布订阅模式比观察者模式要更加灵活多变。
+
+#### HTTP协议
+
+#### HTTP状态码
+
+HTTP状态码表示客户端HTTP请求的返回结果
+
+200：请求成功
+
+301：永久性重定向，表示资源已被分配了新的 URL
+
+403：对请求资源的访问被服务器拒绝
+
+404：没有找到请求的资源
+
+#### 如何提高网站的安全性？
+
+1、使用HTTPS协议
+以前网站采用的是http传输协议，这种传输协议简单，但是是通过明文传输，被截获后很容易将信息泄露。而https中，数据通过加密传输，黑客即使攻击了网站，得到的也是加了密的信息。
+
+2、选择安全稳定的服务器
+
+大厂的能够提供高防的防火墙和硬件设施
+
+#### 深拷贝和浅拷贝
+
+深拷贝是将一个对象从内存中完整的拷贝一份出来，开辟一个新的内存空间存放新对象，且**修改新对象不会影响原对象**。
+
+浅拷贝是创建一个新对象，这个对象有着原始对象属性值的一份拷贝。如果属性是基本类型，拷贝的就是基本类型的值，如果属性是引用类型，拷贝的就是内存地址 ，所以**如果其中一个对象改变了这个地址，就会影响到另一个对象**。
+
+#### 浅拷贝的实现方式
+
+**1.Object.assign()**
+
+Object.assign() 方法可以把源对象自身的可枚举属性拷贝给目标对象，然后返回目标对象。
+
+```js
+let obj1 = { person: {name: "kobe", age: 41},sports:'basketball' };
+let obj2 = Object.assign({}, obj1);
+obj2.person.name = "wade";
+obj2.sports = 'football'
+console.log(obj1); // { person: { name: 'wade', age: 41 }, sports: 'basketball' }
+```
+
+2、展开运算符...
+
+```js
+let obj1 = { name: 'Kobe', address:{x:100,y:100}}
+let obj2= {... obj1}
+obj1.address.x = 200;
+obj1.name = 'wade'
+console.log('obj2',obj2) // obj2 { name: 'Kobe', address: { x: 200, y: 100 } }
+
+```
+
+3、Array.prototype.concat()
+
+4、Array.prototype.slice()
+
+5、函数库lodash的_.clone方法
+
+#### 深拷贝的实现方式
+
+1、函数库lodash的_.cloneDeep方法
