添加网易面经

--- a/面试题/面经/网易面经.md
+++ b/面试题/面经/网易面经.md
@@ -16,6 +16,21 @@
 
 1、组成三角形的关键元素（通过了20%）
 
+[611. 有效三角形的个数](https://leetcode-cn.com/problems/valid-triangle-number/)   跟这道题类似，只不过求的是关键元素。关键元素为：组成的有效的组合数量最多的元素。
+
+例如：
+
+```
+输入 [2,2,3,4]
+输出 2 3 
+解释 
+有效的组合是: 
+2,3,4 (使用第一个 2)
+2,3,4 (使用第二个 2)
+2,2,3
+2、3组成的组合数：3
+```
+
 2、二叉树的最优路径
 
 3、一个字符串通过增删改变成另一个字符串的最小步数
