修改对回溯法的理解

--- a/数据结构与算法/回溯法/回溯法.md
+++ b/数据结构与算法/回溯法/回溯法.md
@@ -1,5 +1,9 @@
 # 回溯法
 
+**当数据量非常大时，不推荐使用回溯法！！！！只适用于len<=30的题目**
+
+**并不是所有树形问题都可以使用回溯！！！！！！！！**
+
 递归算法中非常经典的思想：回溯法。这样的算法思想通常都应用在一类问题上，这类问题叫做**树型问题**。
 
 用回溯算法解决问题的一般步骤：
