修改数组双指针的使用场景

--- a/数据结构与算法/数组篇/【1】数组前言.md
+++ b/数据结构与算法/数组篇/【1】数组前言.md
@@ -7,6 +7,15 @@
 
 > 上面链表中提到的一类题目，主要是利用两个或多个不同位置的指针，通过速度和方向的变换解决问题。注意这种技巧经常在排序数组中使用。
 
+使用大小指针求解，不断逼近结果，最后取得最终值。
+
+适用场景：
+
+- 选择 / 求和固定个数的元素
+- 数组有序 / 可以改变数组顺序使其有序
+
+
+
 - [调整数组顺序使奇数位于偶数前面](http://www.conardli.top/docs/dataStructure/数组/调整数组顺序使奇数位于偶数前面.html)
 - [和为S的两个数字](http://www.conardli.top/docs/dataStructure/数组/和为S的两个数字.html)
 - [和为S的连续正整数序列](http://www.conardli.top/docs/dataStructure/数组/和为S的连续正整数序列.html)
