修改网易面

--- a/面试题/面经/网易面经.md
+++ b/面试题/面经/网易面经.md
@@ -31,8 +31,12 @@
 2、3组成的组合数：3
 ```
 
+[有效三角形题解](https://blog.csdn.net/weixin_43786756/article/details/115308602) 算法：`双指针`
+
 2、二叉树的最优路径
 
 3、一个字符串通过增删改变成另一个字符串的最小步数
+
+[72 编辑距离](https://leetcode-cn.com/problems/edit-distance/) 跟这道题类似 算法：`动态规划`
 
 4、最大和问题
