修改webpack面试题

--- a/面试题/真题题目大杂烩.md
+++ b/面试题/真题题目大杂烩.md
@@ -1071,9 +1071,9 @@ module.exports = {
 
 ### 谈谈你对webpack的看法
 
-webpack是一个模块打包工具，可以使用它管理项目中的模块依赖，并编译输出模块所需的静态文件。它可以很好地管理、打包开发中所用到HTML，CSS，JavaScript和静态文件（图片，字体）等，让开发更高效。
+webpack是一个前端模块化打包工具，可以使用它管理项目中的模块依赖，并编译输出模块所需的静态文件，它可以让开发更高效。
 
-对于不同类型的依赖，webpack有对应的模块加载器，而且会分析模块间的依赖关系，最后合并生成优化的静态资源。
+webpack主要解决的问题就是**如何更高效地管理和维护项目中的每一个资源**。它通过分析项目结构，找到JavaScript模块以及其它的一些浏览器不能直接运行的拓展语言，并将其转换和打包为合适的格式供浏览器使用。
 
 #### 有哪些常见的Loader？你用过哪些Loader？他们是解决什么问题的？
 
@@ -1110,7 +1110,7 @@ commons-chunk-plugin是用来提取不同chunk的公共代码。webpack打包的
 
 #### Loader和Plugin的不同？
 
-`Loader` 就是加载器，本质就是一个函数，在该函数中对接收到的内容进行转换，返回转换后的结果。 因为webpack原生是只能解析js文件， Loader 充当翻译官的身份，对其他类型的资源进行转译工作。Loader的作用是让webpack拥有了加载和解析非JavaScript文件的能力。
+`Loader` 就是加载器，Loader的作用是让webpack拥有了加载和解析非JavaScript文件的能力。 因为webpack原生是只能解析js文件， Loader 充当翻译官的身份，对其他类型的资源进行转译工作。
 
 `Plugin` 就是插件，它可以扩展webpack的功能，让webpack具有更多的灵活性。在 Webpack 运行的生命周期中会广播出许多事件，Plugin 可以监听这些事件，在合适的时机通过 Webpack 提供的 API 改变输出结果。
 
