--- a/面试题/高频考点.md
+++ b/面试题/高频考点.md
@@ -25,8 +25,8 @@
 
 ```
 在TCP报文的报头中，有几个标志字段：
-1、 SYN：同步连接序号，TCP SYN报文就是把这个标志设置为1，来请求建立连接；
-2、 ACK：请求/应答状态。0为请求，1为应答；
+1、 SYN：同步连接序号Synchronize Sequence Numbers，TCP SYN报文就是把这个标志设置为1，来请求建立连接；
+2、 ACK：请求/应答状态Acknowledgement。0为请求，1为应答；
 3、 FIN：结束连线。如果FIN为0是结束连线请求，FIN为1表示结束连线；
 ```
 
