--- a/面试题/真题题目大杂烩.md
+++ b/面试题/真题题目大杂烩.md
@@ -1126,38 +1126,6 @@ commons-chunk-plugin是用来提取不同chunk的公共代码。webpack打包的
 name、hash都是变量，所以放在[]里
 ```
 
-#### 你可以跟我讲述一下HTTP的缓存机制吗？
-
-HTTP的缓存缓分为强制缓存和协商缓存。
-
-**强制缓存**
-
-当缓存数据库中已有所请求的数据时，客户端直接从缓存数据库中获取数据。
-
-当缓存数据库中没有所请求的数据时，客户端的才会从服务端获取数据。
-
-![img](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/16007be6f64ff7f7)
-
-强制缓存可以通过两种方式设置两种 HTTP Header 实现： Expires 和 CacheControl 。强缓存表示在缓存期间不需要请求， state code 为 200
-
-> Expires: Wed, 22 Oct 2018 08:41:00 GMT
-
-Expires 是 HTTP/1 的产物，表示资源会在 Wed, 22 Oct 2018 08:41:00 GMT 后过期，需要再次请求。并且 Expires 受限于本地时间，如果修改了本地时间，可能会造成缓存失效。
-
-> Cache-control: max-age=30
-
-- Cache-Control 出现于 HTTP/1.1 ，优先级⾼于 Expires 。该属性值表示资源会在 30 秒后过期，需要再次请求。
-- Cache-Control 可以在请求头或者响应头中设置，并且可以组合使⽤多种指令
-
-**协商缓存**
-
-客户端会先从缓存数据库中获取到一个缓存数据的标识，得到标识后请求服务端验证是否失效，如果没有失效服务端会返回304，此时客户端直接从缓存中获取所请求的数据，如果标识失效，服务端会返回更新后的数据。
-
-![img](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/16007d1c835d5461)
-
-- 如果缓存过期了，就需要发起请求验证资源是否有更新。协商缓存可以通过设置两种 HTTP Header 实现： Last-Modified 和 ETag
-- 当浏览器发起请求验证资源时，如果资源没有做改变，那么服务端就会返回 304 状态 码，并且更新浏览器缓存有效期。
-
 #### 怎么实现在项目中使用强缓存，协商缓存
 
 #### 今后打算怎么深入学习前端？
@@ -1723,3 +1691,359 @@ console.log('obj2',obj2) // obj2 { name: 'Kobe', address: { x: 200, y: 100 } }
 #### 深拷贝的实现方式
 
 1、函数库lodash的_.cloneDeep方法
+
+### 快手真题
+
+#### WeakMap和Map的区别，及其应用场景
+
+`Map` 以键值对的形式存储数据, Map 对象的键可以是任何类型。Map可枚举
+
+WeakMap 对象是一组键值对的集合，其中的键只能是弱引用对象。WeakMap不能枚举。
+
+Map的应用场景：键找值，查看某数据是否已存在。数组去重。
+
+WeakMap应用场景：通过 WeakMap 缓存计算结果
+
+#### WeakSet和Set的区别，及其应用场景
+
+WeakSet 对象允许你将弱引用对象储存在一个集合中
+
+WeakSet 与 Set 的区别：
+
+- WeakSet 的成员只能是对象，而不能是其他类型的值。而 Set 对象都可以。
+- 其次，WeakSet 中的对象都是弱引用，即垃圾回收机制不考虑 WeakSet 对该对象的引用，也就是说，如果其他对象都不再引用该对象，那么垃圾回收机制会自动回收该对象所占用的内存，不考虑该对象还存在于 WeakSet 之中。
+- 因为垃圾回收机制何时运行是不可预测的，ES6 规定WeakSet 对象是无法被遍历的。
+
+```js
+WeakSet 没有size属性，没有办法遍历它的成员。
+```
+
+根据WeakSet的特点，它的应用场景，
+
+1、WeakSet 可以用来保存 DOM 节点，不用担心这些节点从文档移除时会引发内存泄露。因为WeakSet 里面的引用，都不计入垃圾回收机制，如果其他对象都不再引用该对象，那么垃圾回收机制会自动回收该对象所占用的内存，不考虑该对象还存在于 WeakSet 之中，就不会造成内存泄漏。
+
+Set 的应用场景：数组去重
+
+#### Map与Set的区别
+
+Set 叫做集合，Map 叫做字典。
+
+Set类似于数组，但成员是唯一且无序的，没有重复的值。我们可以使用new Set来创建一个Set。
+
+```
+1、操作方法:
+add(value)：新增
+delete(value)：存在即删除集合中value
+has(value)：判断集合中是否存在 value
+has(value)：判断集合中是否存在 value
+
+set.size获取个数
+
+2、Set转数组
+Array.from 方法可以将 Set 结构转为数组
+或者使用...剩余运算符
+```
+
+Map类似于对象，以键值对的形式进行存储，与对象不同的是，Map的键可以为任意类型，而对象的键局限于字符串。我们可以使用new Map来创建一个Map。
+
+```
+1、操作方法
+set(key, value)：向字典中添加新元素
+get(key)：通过键查找特定的数值并返回
+has(key)：判断字典中是否存在键key
+delete(key)：通过键 key 从字典中移除对应的数据
+clear()：将这个字典中的所有元素删除
+```
+
+#### 浏览器垃圾回收机制说一下
+
+#### 数组扁平化
+
+数组扁平化：将嵌套多层的数组进行降维处理。
+
+可以使用数组拍平方法 `Array.prototype.flat()`
+
+- `Array.prototype.flat()` 用于将嵌套的数组“拉平”，变成一维的数组。该方法返回一个新数组，对原数据没有影响。
+
+- 不传参数时，默认“拉平”一层，可以传入一个整数，表示想要“拉平”的层数。
+
+- 传入 `<=0` 的整数将返回原数组，不“拉平”
+
+- `Infinity` 关键字作为参数时，无论多少层嵌套，都会转为一维数组
+
+- 如果原数组有空位，`Array.prototype.flat()` 会跳过空位。
+
+#### 实现数组拍平flat函数
+
+flat函数就是在数组中找到是数组类型的元素，然后将他们展开。
+
+**函数实现步骤：**
+
+1、遍历数组的每一个元素；
+
+2、判断元素是否是数组；
+
+3、将数组的元素展开一层；
+
+```js
+const arr = [1, 2, 3, 4, [1, 2, 3, [1, 2, 3, [1, 2, 3]]], 5, "string", { name: "弹铁蛋同学" }];
+// concat + 递归
+function flat(arr) {
+  let arrResult = [];
+  arr.forEach(item => {
+    if (Array.isArray(item)) {
+      arrResult = arrResult.concat(flat(item));   // 递归
+    } else {
+      arrResult.push(item);
+    }
+  });
+  return arrResult;
+}
+console.log(flat(arr));
+```
+
+#### 用 reduce 去实现 flat函数
+
+```
+reduce() 方法接收一个函数作为累加器，数组中的每个值（从左到右）开始缩减，最终计算为一个值。
+```
+
+```js
+const arr = [1, 2, 3, 4, [1, 2, 3, [1, 2, 3, [1, 2, 3]]], 5, "string", { name: "弹铁蛋同学" }]
+
+// 首先使用 reduce 展开一层
+arr.reduce((pre, cur) => pre.concat(cur), []);
+// [1, 2, 3, 4, 1, 2, 3, [1, 2, 3, [1, 2, 3]], 5, "string", { name: "弹铁蛋同学" }];
+
+// 用 reduce 展开一层 + 递归
+const flat = arr => {
+  return arr.reduce((pre, cur) => {
+    return pre.concat(Array.isArray(cur) ? flat(cur) : cur);
+  }, []);
+};
+// [1, 2, 3, 4, 1, 2, 3, 1, 2, 3, 1, 2, 3, 5, "string", { name: "弹铁蛋同学" }];
+
+```
+
+`flat` 函数执行是会跳过空位的
+
+```js
+// reduce + 递归
+Array.prototype.fakeFlat = function(num = 1) {
+  if (!Number(num) || Number(num) < 0) {
+    return this;
+  }
+  let arr = [].concat(this);
+  return num > 0
+    ? arr.reduce(
+        (pre, cur) =>
+          pre.concat(Array.isArray(cur) ? cur.fakeFlat(--num) : cur),
+        []
+      )
+    : arr.slice();
+};
+const arr = [1, [3, 4], , ,];
+arr.fakeFlat()
+// [1, 3, 4]
+
+// foEach + 递归
+Array.prototype.fakeFlat = function(num = 1) {
+  if (!Number(num) || Number(num) < 0) {
+    return this;
+  }
+  let arr = [];
+  this.forEach(item => {
+    if (Array.isArray(item)) {
+      arr = arr.concat(item.fakeFlat(--num));
+    } else {
+      arr.push(item);
+    }
+  });
+  return arr;
+};
+const arr = [1, [3, 4], , ,];
+arr.fakeFlat()
+// [1, 3, 4]
+
+```
+
+```js
+
+// foEach + 递归
+Array.prototype.fakeFlat = function(num = 1) {
+  if (!Number(num) || Number(num) < 0) {
+    return this;
+  }
+  let arr = [];
+  this.forEach(item => {
+    if (Array.isArray(item)) {
+      arr = arr.concat(item.fakeFlat(--num));
+    } else {
+      arr.push(item);
+    }
+  });
+  return arr;
+};
+```
+
+#### history和hash原理的不同
+
+URL的hash就是锚点（#），本质上是改变window.locatin的href
+
+history接口有五种模式改变url
+
+#### 介绍一下遍历方法
+
+- `for...of`
+- `for...in`
+- `forEach()`
+- `reduce()`
+- `map()`
+
+### 1.地址栏中输入网址后发生了什么
+
+```
+1.URL解析
+2.缓存查找
+3.DNS解析
+4.TCP连接，三次握手
+5.http请求
+6.服务器响应，浏览器解析。
+7.浏览器渲染
+8.TCP连接断开，4次挥手
+```
+
+从用户输入一个网址到网页最终展现，中间的大致流程如下：
+
+（1）首先浏览器会对 URL 进行解析，分析所需要使用的传输协议和请求的资源的路径。如果URL的协议或者主机名不合法，将会把地址栏中输入的内容传递给搜索引擎。如果没有问题，浏览器会检查 URL 中是否出现了非法字符，如果存在非法字符，则对非法字符进行转义后再进行下一过程。
+
+（2）浏览器会进行缓存查找。判断请求资源是否在缓存里，如果请在并且没有失效，那么就直接使用，否则向服务器发起新的请求。
+
+（3）进行DNS解析，获取URL中域名的 IP 地址，首先会判断本地是否有该域名的 IP 地址的缓存，如果有则使用，如果没有**本地 DNS 服务器**向**根域名服务器**发起请求，获得负责的顶级域名服务器的地址后，再向**顶级域名服务器**请求，然后获得负责的权威域名服务器的地址后，再向**权威域名服务器**发起请求，最终获得域名的 IP 地址后，本地 DNS 服务器再将这个 IP 地址返回给请求的用户。用户向本地DNS服务器发起请求属于递归请求（本地服务器会帮主机进行DNS查询，这一步对主机是透明的。因此是属于递归），本地DNS服务器向各级域名服务器发起请求属于迭代请求。（迭代的查询IP）
+
+![img](https://img-blog.csdnimg.cn/img_convert/4cf5cf49f70dad69bbfde1f1311af582.png)
+
+（4）我们通过DNS解析获取到IP地址后， 需要发起TCP连接请求。 TCP 建立连接需要经历三次握手的过程，首先客户端向服务器发送一个 **SYN 连接请求报文段**和一个随机序号，服务端接收到请求后向客户端发送一个 **SYN ACK报文段**和一个随机序号并且ACK序列号为客户端序列号+1，确认连接请求。客户端接收服务器的确认应答后，进入连接建立的状态，同时向服务器也发送一个 **ACK 确认报文段**，服务器端接收到确认后，也进入连接建立状态，此时双方的连接就建立起来了。
+
+```
+在TCP报文的报头中，有几个标志字段：
+1、 SYN：同步连接序号Synchronize Sequence Numbers，TCP SYN报文就是把这个标志设置为1，来请求建立连接；
+2、 ACK：请求/应答状态Acknowledgement。0为请求，1为应答；
+3、 FIN：结束连线。如果FIN为0是结束连线请求，FIN为1表示结束连线；
+```
+
+
+
+![三次握手.png](https://img-blog.csdnimg.cn/img_convert/75dc3da5603f7f2e528b057a52563948.png)
+
+（5）握手成功后， 浏览器就可以向服务器发送**http**请求了。 **发送HTTP请求的过程就是构建HTTP请求报文并通过TCP协议发送到服务器指定端口(HTTP协议80/8080, HTTPS协议443)**。HTTP请求报文是由三部分组成: 请求行,请求报头和请求正文。
+
+（6）服务器端会监听浏览器端发送的http请求，当浏览器的请求发出后，服务端就会接受该请求，并对相应的信息进行处理，将处理的结果响应给浏览器端。浏览器接收到响应后，开始对 html 文件进行解析，开始页面的渲染过程。
+
+（7）浏览器首先会根据 html 文件构建 DOM 树，根据解析到的 css 文件构建 CSSOM 树。当 DOM 树和 CSSOM 树建立好后，根据它们来构建渲染树。渲染树构建好后，会根据渲染树来进行布局，计算每个节点的几何位置。布局完成后，进入绘制阶段，将各个节点绘制到屏幕上。这个时候整个页面就显示出来了。
+
+（8）最后一步是 断开 TCP连接，需要经历四次挥手过程。
+
+4次挥手大体的过程如下：
+
+1. 客户端向服务器发送一个**FIN连接释放报文段**和一个随机序号，通知服务器现在需要断开（第一次挥手）
+2. 服务器接到要断开的请求之后，向客户端发送一个**ACK确认报文段**和一个随机序号，服务端进入**CLOSE_WAIT**（关闭等待）状态（第二次挥手）
+3. 如果服务端也想断开连接了，向客户端发送一个**FIN连接释放报文段**和一个随机序号（第三次挥手）
+4. 客户端接收到服务器消息后，向服务器端发送一个**ACK确认报文段**和一个随机序号，服务器收到消息后，就处于关闭连接了，处于 **CLOSED** 状态（第四次挥手）
+
+![image.png](https://img-blog.csdnimg.cn/img_convert/ae67d93bd25c900cb90fda95d2c443fa.png)
+
+```
+一般来说， ACK 报文的序列号值为对方序列号值+1
+```
+
+
+
+参考资料：
+
+[通俗易懂了解TCP三次握手](https://mp.weixin.qq.com/s?__biz=MzAxOTc0NzExNg==&mid=2665513094&idx=1&sn=a2accfc41107ac08d74ec3317995955e&scene=21#wechat_redirect)
+
+[三次握手和四次挥手](https://juejin.cn/post/6844903958624878606#heading-0)
+
+[如何向学妹解释在地址栏中输入网址后发生了什么？](https://juejin.cn/post/6844903806505844749#heading-6)
+
+**扩展问题**
+
+```
+Q:说一说三次握手
+三次握手（Three-way Handshake）其实就是指建立一个TCP连接时，需要客户端和服务器总共发送3个包。进行三次握手的主要作用就是为了确认双方的接收能力和发送能力是否正常、指定自己的初始化序列号为后面的可靠性传送做准备。
+
+Q:为什么需要三次握手，两次不行吗？
+弄清这个问题，我们需要先弄明白三次握手的目的是什么，能不能只用两次握手来达到同样的目的。
+
+第一次握手：客户端发送网络包，服务端收到了。
+这样服务端就能得出结论：客户端的发送能力、服务端的接收能力是正常的。
+第二次握手：服务端发包，客户端收到了。
+这样客户端就能得出结论：服务端的接收、发送能力，客户端的接收、发送能力是正常的。不过此时服务器并不能确认客户端的接收能力是否正常。
+第三次握手：客户端发包，服务端收到了。
+这样服务端就能得出结论：客户端的接收、发送能力正常，服务器自己的发送、接收能力也正常。
+
+因此，需要三次握手才能确认双方的接收与发送能力是否正常。
+
+
+Q:挥手为什么要4次？
+关闭连接时，当服务端收到FIN报文时，可能并不会立即关闭，所以只能先回复一个ACK报文，告诉客户端，"你发的FIN报文我收到了"。只有等到我服务端所有的报文都发送完了，我才能发送FIN报文，因此ACK和FIN不能一起发送。故需要四次挥手。
+```
+
+#### 你可以跟我讲述一下HTTP的缓存机制吗？
+
+HTTP的缓存缓分为强制缓存和协商缓存。
+
+**强制缓存**
+
+当缓存数据库中已有所请求的数据时，客户端直接从缓存数据库中获取数据。
+
+当缓存数据库中没有所请求的数据时，客户端的才会从服务端获取数据。
+
+![img](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/16007be6f64ff7f7)
+
+强制缓存可以通过两种方式设置两种 HTTP Header 实现： Expires 和 CacheControl 。强缓存表示在缓存期间不需要请求， state code 为 200
+
+> Expires: Wed, 22 Oct 2018 08:41:00 GMT
+
+Expires 是 HTTP/1 的产物，表示资源会在 Wed, 22 Oct 2018 08:41:00 GMT 后过期，需要再次请求。并且 Expires 受限于本地时间，如果修改了本地时间，可能会造成缓存失效。
+
+> Cache-control: max-age=30
+
+- Cache-Control 出现于 HTTP/1.1 ，优先级⾼于 Expires 。该属性值表示资源会在 30 秒后过期，需要再次请求。
+- Cache-Control 可以在请求头或者响应头中设置，并且可以组合使⽤多种指令
+
+**协商缓存**
+
+客户端会先从缓存数据库中获取到一个缓存数据的标识，得到标识后请求服务端验证是否失效，如果没有失效服务端会返回304，此时客户端直接从缓存中获取所请求的数据，如果标识失效，服务端会返回更新后的数据。
+
+![img](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/16007d1c835d5461)
+
+- 如果缓存过期了，就需要发起请求验证资源是否有更新。协商缓存可以通过设置两种 HTTP Header 实现： Last-Modified 和 ETag
+- 当浏览器发起请求验证资源时，如果资源没有做改变，那么服务端就会返回 304 状态 码，并且更新浏览器缓存有效期。
+
+#### map和foreach有什么区别
+
+map和foreach都可以用来遍历数组。
+
+`forEach()`: 针对每一个元素执行提供的函数
+
+`map()`: 创建一个新的数组，其中每一个元素由调用数组中的每一个元素执行提供的函数得来。
+
+map和foreach的主要区别：
+
+1、forEach()`方法不会返回执行结果，而是`undefined；`map()`方法会得到一个新的数组并返回。
+
+2、map能保证原始数组的不变。forEach 不能确保数组的不变性，只有你不改变数据，原数组才会不变。
+
+选择使用哪个，如果不打算改变数据，只想获取推荐使用foreach；`map()`适用于你要改变数据值的时候
+
+#### 手写：Promise.all()/race()
+
+#### 盒模型
+
+盒模型分为IE盒模型和W3C标准盒模型。盒模型都是由四个部分组成的，分别是content、padding、margin和border。
+
+标准盒模型和IE盒模型的区别在于设置width和height时，包含内容不同。标准盒模型的width和height属性只包含了content，而IE盒模型的width和height属性包含了border、padding和content。
+
+在ie8+浏览器中，我们可以通过修改元素的box-sizing属性来改变元素的盒模型。
