添加垃圾回收机制

--- a/面试题/真题题目大杂烩.md
+++ b/面试题/真题题目大杂烩.md
@@ -1757,6 +1757,18 @@ clear()：将这个字典中的所有元素删除
 
 #### 浏览器垃圾回收机制说一下
 
+JS的垃圾回收机制是，垃圾收集器会定期找出那些不再继续使用的变量，然后释放其内存。
+
+垃圾回收实现方式主要有两种，**标记清除**和**引用计数**。
+
+**标记清除：**
+
+垃圾回收器在运行的时候会给存储在内存中的所有变量都加上标记；然后，它会去掉环境中的变量以及被引用的变量，在此之后再被加上标记的变量将被视为准备删除的变量，这时候垃圾回收器就销毁那些带标记的值并回收它们所占用的内存空间。
+
+**引用计数：**
+
+引用计数是指每个值被引用的次数。当声明了一个变量并将一个引用类型值赋给该变量时，则这个值的引用次数就是1。如果同一个值又被赋给另一个变量，则该值的引用次数加1。相反，如果包含对这个值引用的变量又取得了另外一个值，则这个值的引用次数减1。当这个值的引用次数变成0时，则说明没有办法再访问这个值了，因而就可以将其占用的内存空间回收回来。这样，当垃圾回收器下次再运行时，它就会释放那些引用次数为0的值所占用的内存。
+
 #### 数组扁平化
 
 数组扁平化：将嵌套多层的数组进行降维处理。
