--- a/面试题/真题题目大杂烩.md
+++ b/面试题/真题题目大杂烩.md
@@ -663,6 +663,9 @@ class MyPromise {
        */
       let values = []
       let count = 0
+      //entries() 方法返回一个数组的迭代对象，该对象包含数组的键值对 (key/value)。
+//迭代对象中数组的索引值作为 key， 数组元素作为 value。
+
       for (let [i, p] of list.entries()) {
         // 数组参数如果不是MyPromise实例，先调用MyPromise.resolve
         this.resolve(p).then(res => {
