--- a/面试题/真题题目大杂烩.md
+++ b/面试题/真题题目大杂烩.md
@@ -1934,7 +1934,9 @@ history接口有五种模式改变url
 
 （2）浏览器会进行缓存查找。判断请求资源是否在缓存里，如果请在并且没有失效，那么就直接使用，否则向服务器发起新的请求。
 
-（3）进行DNS解析，获取URL中域名的 IP 地址，首先会判断本地是否有该域名的 IP 地址的缓存，如果有则使用，如果没有**本地 DNS 服务器**向**根域名服务器**发起请求，获得负责的顶级域名服务器的地址后，再向**顶级域名服务器**请求，然后获得负责的权威域名服务器的地址后，再向**权威域名服务器**发起请求，最终获得域名的 IP 地址后，本地 DNS 服务器再将这个 IP 地址返回给请求的用户。用户向本地DNS服务器发起请求属于递归请求（本地服务器会帮主机进行DNS查询，这一步对主机是透明的。因此是属于递归），本地DNS服务器向各级域名服务器发起请求属于迭代请求。（迭代的查询IP）
+（3）进行DNS解析，获取URL中域名的 IP 地址。首先会查找浏览器缓存，如果有该域名的 IP 地址的缓存，如果有则使用，如果没有，会检查检查操作系统缓存，常见的如hosts文件。如果没有，则会查看本地DNS是否有该域名的 IP 地址的缓存，如果没有，**本地 DNS 服务器**向**根域名服务器**发起请求，获得负责的顶级域名服务器的地址后，再向**顶级域名服务器**请求，然后获得负责的权威域名服务器的地址后，再向**权威域名服务器**发起请求，最终获得域名的 IP 地址后，本地 DNS 服务器再将这个 IP 地址返回给请求的用户。用户向本地DNS服务器发起请求属于递归请求（本地服务器会帮主机进行DNS查询，这一步对主机是透明的。因此是属于递归），本地DNS服务器向各级域名服务器发起请求属于迭代请求。（迭代的查询IP）
+
+![img](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/1737753b2d71e4c6)
 
 ![img](https://img-blog.csdnimg.cn/img_convert/4cf5cf49f70dad69bbfde1f1311af582.png)
 
@@ -2005,7 +2007,35 @@ Q:挥手为什么要4次？
 关闭连接时，当服务端收到FIN报文时，可能并不会立即关闭，所以只能先回复一个ACK报文，告诉客户端，"你发的FIN报文我收到了"。只有等到我服务端所有的报文都发送完了，我才能发送FIN报文，因此ACK和FIN不能一起发送。故需要四次挥手。
 ```
 
-#### 你可以跟我讲述一下HTTP的缓存机制吗？
+#### map和foreach有什么区别
+
+map和foreach都可以用来遍历数组。
+
+`forEach()`: 针对每一个元素执行提供的函数
+
+`map()`: 创建一个新的数组，其中每一个元素由调用数组中的每一个元素执行提供的函数得来。
+
+map和foreach的主要区别：
+
+1、forEach()`方法不会返回执行结果，而是`undefined；`map()`方法会得到一个新的数组并返回。
+
+2、map能保证原始数组的不变。forEach 不能确保数组的不变性，只有你不改变数据，原数组才会不变。
+
+选择使用哪个，如果不打算改变数据，只想获取推荐使用foreach；`map()`适用于你要改变数据值的时候
+
+#### 手写：Promise.all()/race()
+
+#### 盒模型
+
+盒模型分为IE盒模型和W3C标准盒模型。盒模型都是由四个部分组成的，分别是content、padding、margin和border。
+
+标准盒模型和IE盒模型的区别在于设置width和height时，包含内容不同。标准盒模型的width和height属性只包含了content，而IE盒模型的width和height属性包含了border、padding和content。
+
+在ie8+浏览器中，我们可以通过修改元素的box-sizing属性来改变元素的盒模型。
+
+#### 你可以跟我讲述一下HTTP的缓存机制（浏览器缓存）吗？
+
+**提高网页反应速度的一个方式就是使用缓存**
 
 HTTP的缓存缓分为强制缓存和协商缓存。
 
@@ -2036,29 +2066,3 @@ Expires 是 HTTP/1 的产物，表示资源会在 Wed, 22 Oct 2018 08:41:00 GMT 
 
 - 如果缓存过期了，就需要发起请求验证资源是否有更新。协商缓存可以通过设置两种 HTTP Header 实现： Last-Modified 和 ETag
 - 当浏览器发起请求验证资源时，如果资源没有做改变，那么服务端就会返回 304 状态 码，并且更新浏览器缓存有效期。
-
-#### map和foreach有什么区别
-
-map和foreach都可以用来遍历数组。
-
-`forEach()`: 针对每一个元素执行提供的函数
-
-`map()`: 创建一个新的数组，其中每一个元素由调用数组中的每一个元素执行提供的函数得来。
-
-map和foreach的主要区别：
-
-1、forEach()`方法不会返回执行结果，而是`undefined；`map()`方法会得到一个新的数组并返回。
-
-2、map能保证原始数组的不变。forEach 不能确保数组的不变性，只有你不改变数据，原数组才会不变。
-
-选择使用哪个，如果不打算改变数据，只想获取推荐使用foreach；`map()`适用于你要改变数据值的时候
-
-#### 手写：Promise.all()/race()
-
-#### 盒模型
-
-盒模型分为IE盒模型和W3C标准盒模型。盒模型都是由四个部分组成的，分别是content、padding、margin和border。
-
-标准盒模型和IE盒模型的区别在于设置width和height时，包含内容不同。标准盒模型的width和height属性只包含了content，而IE盒模型的width和height属性包含了border、padding和content。
-
-在ie8+浏览器中，我们可以通过修改元素的box-sizing属性来改变元素的盒模型。
