增加浏览器缓存机制

--- a/面试题/真题题目大杂烩.md
+++ b/面试题/真题题目大杂烩.md
@@ -2033,36 +2033,134 @@ map和foreach的主要区别：
 
 在ie8+浏览器中，我们可以通过修改元素的box-sizing属性来改变元素的盒模型。
 
-#### 你可以跟我讲述一下HTTP的缓存机制（浏览器缓存）吗？
+#### 说一下浏览器缓存
 
-**提高网页反应速度的一个方式就是使用缓存**
+当浏览器请求一个网站的时候，会加载各种各样的资源，比如HTML CSS和JS等等。对于一些静态资源，浏览器就会把他们保存在本地文件中，下次访问的时候直接加载这些资源，加速访问。
 
-HTTP的缓存缓分为强制缓存和协商缓存。
+浏览器是否使用缓存、缓存多久，是由服务器控制，服务器发回的响应的「响应头」部分的某些字段指明了有关缓存的关键信息，比如Cache-Control(控制缓存的行为)等等。
 
-**强制缓存**
+这个就是浏览器缓存
 
-当缓存数据库中已有所请求的数据时，客户端直接从缓存数据库中获取数据。
+#### 浏览器缓存机制
 
-当缓存数据库中没有所请求的数据时，客户端的才会从服务端获取数据。
+浏览器中缓存可分为强缓存和协商缓存
 
-![img](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/16007be6f64ff7f7)
+1）浏览器在加载资源时，先根据这个资源的一些http header判断它是否命中强缓存，**强缓存如果命中，浏览器直接从自己的缓存中读取资源，不会发请求到服务器**。
 
-强制缓存可以通过两种方式设置两种 HTTP Header 实现： Expires 和 CacheControl 。强缓存表示在缓存期间不需要请求， state code 为 200
+2）当强缓存没有命中的时候，浏览器一定会发送一个请求到服务器，**通过服务器端依据资源的另外一些http header验证这个资源是否命中协商缓存**，如果协商缓存命中，服务器会将这个请求返回，**但是不会返回这个资源的数据，而是告诉客户端可以直接从缓存中加载这个资源**，于是浏览器就又会从自己的缓存中去加载这个资源。
 
-> Expires: Wed, 22 Oct 2018 08:41:00 GMT
+3）强缓存与协商缓存的共同点是：**如果命中，都是从客户端缓存中加载资源，而不是从服务器加载资源数据**；区别是：**强缓存不发请求到服务器，协商缓存会发请求到服务器**。
 
-Expires 是 HTTP/1 的产物，表示资源会在 Wed, 22 Oct 2018 08:41:00 GMT 后过期，需要再次请求。并且 Expires 受限于本地时间，如果修改了本地时间，可能会造成缓存失效。
+4）当协商缓存也没有命中的时候，浏览器直接从服务器加载资源数据。
 
-> Cache-control: max-age=30
+```
+简写：
+当浏览器再次访问一个已经访问过的资源时，它会这样做：
+1.看看是否命中强缓存，如果命中，就直接使用缓存了。
+2.如果没有命中强缓存，就发请求到服务器检查是否命中协商缓存。
+3.如果命中协商缓存，服务器会返回 304 告诉浏览器使用本地缓存。
+4.否则，返回最新的资源。
+```
 
-- Cache-Control 出现于 HTTP/1.1 ，优先级⾼于 Expires 。该属性值表示资源会在 30 秒后过期，需要再次请求。
-- Cache-Control 可以在请求头或者响应头中设置，并且可以组合使⽤多种指令
 
-**协商缓存**
 
-客户端会先从缓存数据库中获取到一个缓存数据的标识，得到标识后请求服务端验证是否失效，如果没有失效服务端会返回304，此时客户端直接从缓存中获取所请求的数据，如果标识失效，服务端会返回更新后的数据。
+#### 强缓存
 
-![img](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/16007d1c835d5461)
+强缓存是利用Expires或者Cache-Control这两个http response header实现的，它们都用来表示资源在客户端缓存的有效期。
 
-- 如果缓存过期了，就需要发起请求验证资源是否有更新。协商缓存可以通过设置两种 HTTP Header 实现： Last-Modified 和 ETag
-- 当浏览器发起请求验证资源时，如果资源没有做改变，那么服务端就会返回 304 状态 码，并且更新浏览器缓存有效期。
+Expires是HTTP 1.0提出的一个表示资源过期时间的header，它描述的是一个绝对时间，由服务器返回，用GMT格式的字符串表示。
+
+Cache-Control，这是一个相对时间，在配置缓存的时候，以秒为单位，用数值表示。
+
+Exipires的缓存原理：
+
+1、浏览器第一次跟服务器请求资源，服务器在返回这个资源的同时，在response的header加上Expires的header。
+
+![response的header加上Expires](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/165b74cf04b04c8a)
+
+2、浏览器在接收到这个资源后，会把这个资源连同所有response header一起缓存下来。
+
+3、浏览器再请求这个资源时，**先从缓存中寻找，找到这个资源后，拿出它的Expires跟当前的请求时间比较**，如果请求时间在Expires指定的时间之前，就能命中缓存，否则就不行；
+
+4、如果缓存没有命中，浏览器直接从服务器加载资源时，Expires Header在重新加载的时候会被更新。
+
+
+
+CacheControl的缓存原理
+
+1、浏览器第一次跟服务器请求资源，服务器在返回这个资源的同时，在response的header加上Cache-Control的header
+
+![response的header加上Cache-Control](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/165b74cf19190d29)
+
+2、浏览器在接收到这个资源后，会把这个资源连同所有response header一起缓存下来。
+
+3、浏览器再请求这个资源时，**先从缓存中寻找，找到这个资源后，根据它第一次的请求时间和Cache-Control设定的有效期**，计算出一个资源过期时间，再拿这个过期时间跟当前的请求时间比较，如果请求时间在过期时间之前，就能命中缓存，否则就不行。
+
+4、如果缓存没有命中，浏览器直接从服务器加载资源时，**Cache-Control Header在重新加载的时候会被更新**；
+
+这两个header可以只启用一个，也可以同时启用，**当response header中，Expires和Cache-Control同时存在时，Cache-Control优先级高于Expires**：
+
+>- HTTP状态码
+>- Exipres 和CacheControl的区别
+
+#### 协商缓存
+
+当浏览器对某个资源的请求没有命中强缓存，**就会发一个请求到服务器，验证协商缓存是否命中，如果协商缓存命中，请求响应返回的http状态为304并且会显示一个Not Modified的字符串**。
+
+**协商缓存是利用的是【Last-Modified，If-Modified-Since】和【ETag、If-None-Match】这两对Header来管理的**。
+
+**【Last-Modified，If-Modified-Since】的控制缓存的原理：**
+
+1、浏览器第一次跟服务器请求资源，服务器在返回这个资源的同时，**在response的header加上Last-Modified的header，这个header表示这个资源在服务器上的最后修改时间**。
+
+2、浏览器再次跟服务器请求这个资源时，**在request的header上加上If-Modified-Since的header**，这个header的值就是上一次请求时返回的Last-Modified的值：
+
+3、服务器再次收到资源请求时，**根据浏览器传过来If-Modified-Since和资源在服务器上的最后修改时间判断资源是否有变化**，如果没有变化则返回304 Not Modified，但是不会返回资源内容；如果有变化，就正常返回资源内容。
+
+4、浏览器收到304的响应后，就会从缓存中加载资源。
+
+5、如果协商缓存没有命中，浏览器直接从服务器加载资源时，**Last-Modified Header在重新加载的时候会被更新**，下次请求时，**If-Modified-Since会启用上次返回的Last-Modified值**。
+
+```
+一般来说，在没有调整服务器时间和篡改客户端缓存的情况下，这两个header配合起来管理协商缓存是非常可靠的，但是有时候也会服务器上资源其实有变化，但是最后修改时间却没有变化的情况，而这种问题又很不容易被定位出来，而当这种情况出现的时候，就会影响协商缓存的可靠性
+
+```
+
+
+
+**【ETag、If-None-Match】缓存原理：**
+
+1、浏览器第一次跟服务器请求一个资源，**服务器在返回这个资源的同时，在response的header加上ETag的header**，这个header是服务器根据当前请求的资源生成的一个唯一标识，**这个唯一标识是一个字符串，只要资源有变化这个串就不同**，跟最后修改时间没有关系，所以能很好的补充Last-Modified的问题。
+
+![在response的header加上ETag](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/165b74d0e587fdf5)
+
+2、浏览器再次跟服务器请求这个资源时，**在request的header上加上If-None-Match的header**，这个header的值就是上一次请求时返回的ETag的值。
+
+![在request的header上加上If-None-Match](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/165b74d05d5f4171)
+
+3、服务器再次收到资源请求时，**根据浏览器传过来If-None-Match和然后再根据资源生成一个新的ETag**，如果这两个值相同就说明资源没有变化，否则就是有变化；如果没有变化则返回304 Not Modified，但是不会返回资源内容；如果有变化，就正常返回资源内容。与Last-Modified不一样的是，当服务器返回304 Not Modified的响应时，**由于ETag重新生成过，response header中还会把这个ETag返回**，即使这个ETag跟之前的没有变化：
+
+4、浏览器收到304的响应后，就会从缓存中加载资源。
+
+>- Etag和Last-Modified的区别
+>- 强缓存和协商缓存的区别
+
+#### Exipres 和CacheControl的区别
+
+Expires是较老的强缓存管理header，**由于它是服务器返回的一个绝对时间**，在服务器时间与客户端时间相差较大时，缓存管理容易出现问题，**比如：随意修改下客户端时间，就能影响缓存命中的结果**。
+
+Cache-Control，这是一个相对时间，在配置缓存的时候，以秒为单位，用数值表示，更安全一些
+
+#### Etag和Last-Modified的区别
+
+ETag相对于Last-Modified可以更加准确的判断文件内容是否被修改
+
+#### 强缓存和协商缓存的区别
+
+强缓存：直接从本地副本对比读取，**不去请求服务器**，返回的状态码是**200**
+
+协商缓存：会去服务器比对，若没改变才直接读取本地缓存，返回的状态码是**304**
+
+#### HTTP状态码
+
+#### 
