增加算法真题

--- a/面试题/算法题.md
+++ b/面试题/算法题.md
@@ -231,7 +231,7 @@ var addStrings = function (num1, num2) {
 
 ![image-20210313180943369](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210313180943369.png)
 
-我们观察竖式相乘，他是将每一列相加的结果。每次相乘，得到的数值不断地加入当前列的结果数组中。 
+我们观察竖式相乘，他是将每一列相加的结果。每次相乘，得到的数值不断地加入当前列的结果数组中。
 
 ```js
 var multiply = function (num1, num2) {
@@ -299,3 +299,135 @@ var generateParenthesis = function (n) {
 ```
 
 **更多回溯算法，请看数据结构与算法/回溯法**
+
+#### 二分查找
+
+```js
+var search = function (nums, target) {
+  let left = 0;
+  let right = nums.length - 1;
+  let ans = -1;
+  while (left <= right) {
+    let mid = Math.floor((left + right) / 2);
+    if (nums[mid] === target) {
+      ans = mid;
+      break;
+    } else if (nums[mid] < target) {
+      left = mid + 1;
+    } else {
+      right = mid - 1;
+    }
+  }
+  return ans;
+};
+```
+
+#### 两数之和
+
+#### 字符串反转
+
+**解法1**
+
+```js
+var reverseString = function (s) {
+    return s.reverse();
+};
+```
+
+**解法2**
+
+```js
+var reverseString = function (s) {
+  var len = s.length;
+  if (len <= 0) {
+    return s;
+  }
+  let start = 0, end = len - 1;
+  while (start < end) {
+    var temp = s[start];
+    s[start] = s[end];
+    s[end] = temp;
+    start++;
+    end--;
+  }
+  return s;
+};
+```
+
+#### 时针与分针的夹角
+
+[leetcode](https://leetcode-cn.com/problems/angle-between-hands-of-a-clock/)
+
+```js
+var angleClock = function (hour, minutes) {
+  let singleHour = 30;
+  let singleMinu = 6;
+  //转化成小时 几点几小时
+  let hourAngle = (hour % 12 + minutes / 60.0) * singleHour;
+  let minuAngle = minutes * singleMinu;
+  //夹角 = 分针距离12的角度 - 时针距离12的角度。取绝对值
+  let ans = Math.abs(minuAngle - hourAngle);
+  //取最小角
+  return Math.min(ans, 360 - ans);
+};
+```
+
+#### 求一棵二叉树的最大深度（写出两种方法 dfs bfs）
+
+**dfs 深度优先遍历**
+
+```js
+var maxDepth = function (root) {
+  if (!root) {
+    return 0;
+  }
+  return Math.max(maxDepth(root.left), maxDepth(root.right)) + 1;
+};
+```
+
+**bfs 广度优先遍历**
+
+```js
+var maxDepth = function (root) {
+  if (!root) return 0;
+  let depth = 1;
+  let quene = [root];
+  while (quene.length) {
+    //当前层节点数
+    const levelSize = quene.length;
+    //节点出列，子节点入队列
+    for (let i = 0; i < levelSize; i++) {
+      const cur = quene.shift();
+      if (cur.left) quene.push(cur.left);
+      if (cur.right) quene.push(cur.right);
+    }
+    if (quene.length) depth++;
+  }
+  return depth;
+};
+```
+
+#### 二叉树的层序遍历
+
+```js
+var levelOrder = function (root) {
+  if (!root) return [];
+  let quene = [root];
+  const ans = [];
+  while (quene.length) {
+    //当前层个数
+    const levelSize = quene.length;
+    const temp = [];
+    //遍历当前层，节点出队，子节点入队
+    for (let i = 0; i < levelSize; i++) {
+      const cur = quene.shift();
+      temp.push(cur.val);
+      if (cur.left) quene.push(cur.left);
+      if (cur.right) quene.push(cur.right);
+    }
+    ans.push(temp);
+  }
+  return ans
+};
+```
+
