--- a/面试题/真题题目大杂烩.md
+++ b/面试题/真题题目大杂烩.md
@@ -2487,7 +2487,7 @@ export default {
 
 #### v-for中key的作用
 
-当Vue使用`v-for`更新已渲染的元素列表时,默认用`就地复用`策略；列表数据修改的时候,他会根据key值去判断某个值是否修改,如果修改,则重新渲染这一项,否则复用之前的元素; 
+当Vue使用`v-for`更新已渲染的元素列表时,默认用`就地复用`策略、
 
 为了给Vue一个提示，以便它能跟踪每个节点的身份，从而重用和重新排序现有元素，需要为每项提供一个唯一 key 属性。
 
@@ -2617,34 +2617,19 @@ prop 只可以从上一级组件传递到下一级组件，就是所谓的单向
 >- 什么是回流和重绘，如何避免？
 >- attribute和property的区别
 >- diff算法
->- Vue创建Vnode过程
-
-#### Vue创建Vnode过程
-
-Vue 利用 _createElement 方法创建 VNode
-
-#### 虚拟DOM的具体实现
-
-虚拟DOM算法的主要实现有几个步骤：
-
-1、需要用JS对象模拟DOM树
-
-2、比较两个虚拟DOM树的差异，使用diff算法
-
-3、将两个虚拟DOM对象的差异应用到真正的DOM树上，使用patch。
 
 #### diff算法
 
 diff 算法是用来比较新旧两棵虚拟DOM树的差异，找出差异并更新到真正的DOM树上。diff的过程就是调用名为`patch`的函数，比较新旧节点，一边比较一边给**真实的DOM**打补丁的过程。
 
-当数据发生改变时，setter函数会通知Dep调用`Dep.notify`通知管理的Watcher对象，订阅者就会调用`patch`给真实的DOM打补丁，更新相应的视图。
+当数据发生改变时，setter函数会通知Dep调用`Dep.notify`通知管理的Watcher对象，触发Watch对象的update，update又会调用`patch`给真实的DOM打补丁，更新相应的视图。
 
 patch函数接收两个参数`oldVnode`和`Vnode`分别代表旧节点和新的节点。
 
 - 在patch函数中判断两个节点是否值得比较，如果值得就执行patchVnode
 - 如果不值得，就直接用新节点替换旧节点。
 
->- 如何判断值不值得：会判断key值、标签名以及data，判断是不是一样的节点，如果是一样的节点，才值得深入检查子节点，如果说不一样，就直接替换。
+>- 如何判断值不值得：会判断key值、标签名以及data（data中包括class style等等），判断是不是一样的节点，如果是一样的节点，才值得深入检查子节点，如果说不一样，就直接替换。
 
 patchVnode函数中，进行了几个判断：
 
@@ -2662,19 +2647,159 @@ patchVnode函数中，进行了几个判断：
 
 **updateChildren**
 
+![img](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/163783eb58bfdb34)
+
+在这个方法中，有两个数组，分别是新旧虚拟DOM树的节点数组；有四个指针，分别指向旧节点数组和新节点数组的头和尾节点，会对这四个指针两两做sameVnode比较，一共有4种比较方式，如果有能匹配上，那么真实的DOM节点就会移动到Vnode相应的位置。
+
+- 如果是oldS和E匹配上了，那么真实dom中的第一个节点会移到最后
+- 如果是oldE和S匹配上了，那么真实dom中的最后一个节点会移到最前。匹配上的两个指针向中间移动
+- 如果四种匹配均未成功，则分成两种情况考虑：
+  - 新旧节点存在key，则会根据OldChild的key生成一张hash表，用newStart的key与hash表做匹配，匹配成功，就判断是否为sameNode，是，则就在真实DOM中将成功的节点移到最前面；否则，将newStart生成对应的节点插入到dom中对应的oldStart位置，S指针向中间移动，被匹配到old中的节点置null。
+  - 如果没有key,则直接将`S`生成新的节点插入真实DOM。
+
+这个匹配过程的结束有两个条件：
+
+- `oldS > oldE`表示`oldCh`先遍历完，那么就将多余的newVnode根据index添加到真实的dom中去
+- `S > E`表示newVnode先遍历完，那么就在真实dom中将区间为`[oldS, oldE]`的多余节点删掉
+
 >- diff算法的复杂度
->- updateChildren方法的实现
->- diff算法移动的过程 （及updateChildren)
+>- diff算法移动的过程 （即updateChildren)
 
+#### diff算法移动的过程 （说一下updateChildren方法）
 
+diff算法的移动是在updateChildren里边，在这个方法中.....
 
 #### diff算法的复杂度
 
 diff算法比较新旧节点的时候，比较只会在同层级进行, 不会跨层级比较，算法复杂度就可以达到 `O(n)`。因为在前端当中，很少会跨越层级地移动 `DOM` 元素，所以 `Virtual DOM` 只会对同一个层级的元素进行对比。
 
-
-
-
-
 #### 浏览器渲染过程
 
+```
+1.渲染的基本步骤
+	构建Dom树。将包含三类东西，构建会被Js阻塞。
+	构建CSSOM规则树。
+	根据DOM CSSOM构建渲染树。渲染对象，不是一对一关系。
+	根据渲染树布局，计算每个节点的几何信息。
+	将各个节点绘制到屏幕上。
+```
+
+所有的浏览器渲染引擎工作流程大致分为5步：创建 `DOM` 树 —> 创建 `Style Rules` -> 构建 `Render` 树 —> 布局 `Layout` -—> 绘制 `Painting`。
+
+- 第一步，构建 DOM 树：用 HTML 分析器，分析 HTML 元素，构建一棵 DOM 树；
+- 第二步，构建CSSOM规则树，生成样式表：用 CSS 分析器，分析 CSS 文件和元素上的 inline 样式，生成页面的样式表；
+- 第三步，构建 Render 树：将 DOM 树和样式表关联起来，构建一棵 Render 树（Attachment）。每个 DOM 节点都有 attach 方法，接受样式信息，返回一个 render 对象（又名 renderer），这些 render 对象最终会被构建成一棵 Render 树；
+- 第四步，确定节点坐标：根据 Render 树结构，为每个 Render 树上的节点确定一个在显示屏上出现的精确坐标；
+- 第五步，绘制页面：根据 Render 树和节点显示坐标，然后调用每个节点的 paint 方法，将它们绘制出来。
+
+![img](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/3534846-00ef9f3d405462ef.png)
+
+
+
+### 如何实现水平垂直居中
+
+#### 已知高度和宽度的元素
+
+**方案一：**设置父元素为相对定位，给子元素设置绝对定位，`top: 0; right: 0; bottom: 0; left: 0; margin: auto;`
+
+**方案二：**设置父元素为相对定位，给子元素设置绝对定位，`left: 50%; top: 50%; margin-left: -元素宽度的一半px; margin-top: -元素高度的一半px;`
+
+#### 未知高度和宽度的元素
+
+**方案一：**使用定位属性
+
+设置父元素为相对定位，给子元素设置绝对定位，**left: 50%; top: 50%; transform: translateX(-50%) translateY(-50%);**
+
+**方案二：**使用flex布局实现
+
+设置父元素为flex定位，**justify-content: center; align-items: center;**
+
+#### CSS为什么要清除浮动？如何清除浮动？
+
+由于父级盒子很多情况下，不方便给高度，但是子盒子浮动又不占有位置，最后父级盒子高度为 0 时，就会影响下面的标准流盒子。清除浮动的本质是清除浮动元素造成的影响，清除浮动之后，父级就会根据浮动的子盒子自动检测高度。父级有了高度，就不会影响下面的标准流了。
+
+清除浮动的方法有：
+
+**1.clear:both;**
+
+在浮动元素末尾添加一个空的标签，**这个标签必须为块级元素**。然后将其设置clear:both,这样就可以清除浮动。
+
+**优点：**简单易懂，方便。
+
+**缺点：**添加了无意义的冗余元素，结构化差。
+
+```html
+<div class="box">
+    <div class="inner"></div>
+    <div class="inner"></div>
+    <div class="inner"></div>
+    <div style="clear:both"></div>
+</div>
+```
+
+**2.伪元素清除浮动**
+
+给父元素添加一个before或after伪元素，然后设置伪元素的样式，这是通用的清理浮动方案。
+
+**优点：**没有增加标签，结构更简单
+
+**缺点：**没有照顾低版本浏览器
+
+```css
+.clearfix:after { 
+ content: ""; 
+ display: block; 
+ height: 0; 
+ clear: both; 
+ visibility: hidden; 
+} 
+.clearfix { /* IE6、7 专有 */ 
+ *zoom: 1;
+}
+```
+
+**3.给父元素使用overflow:hidden;**
+
+让父容器形成了BFC（块级格式上下文），而BFC可以包含浮动，父元素的高度计算会包括浮动元素的高度。
+
+#### BFC是什么，怎么样形成BFC，BFC有什么作用？
+
+BFC （Block Formatting Context） 是**块级格式化上下文**，是**Web页面**中**盒模型布局**的**CSS渲染模式**，是一个隔离的独立容器。 
+
+**怎样形成一个BFC？** 
+
+由以下之一创建：
+
+- 浮动：float元素除了none以外。
+
+- 绝对定位的元素
+
+- 非块级元素具有 display: inline-block，table-cell,flex等。
+
+  块级元素具有overflow ，且值不是 **visible**
+
+**BFC用处**
+
+1. 清除浮动，给父元素添加overflow:hidden。因为计算BFC的高度时，浮动元素也参与计算。
+2. 用于两栏自适应布局
+3. 防止垂直margin合并。因为BFC就是页面上的一个隔离的独立容器，容器里面的子元素不会影响到外面的元素，外面的也不会影响里面的。如果元素之间是兄弟元素关系，将元素的渲染规则改为BFC。如果是父子元素关系，将父元素的渲染模式改为BFC渲染模式。
+
+```
+平方向上的margin累加,而兄弟结构垂直方向上的margin是合并的
+```
+
+
+
+#### 怎么用栈去实现队列
+
+#### 前端语言和后端语言区别
+
+#### 面向对象和面向过程
+
+####  Vue在创建组件的时候，说说最应该注意哪三点
+
+#### history 路由和 hash 路由的区别, 在浏览器有什么影响
+
+#### 什么是回流和重绘，如何避免？
+
+#### attribute和property的区别
