添加三道动规题解

--- a/数据结构与算法/动态规划/动态规划.md
+++ b/数据结构与算法/动态规划/动态规划.md
@@ -1,3 +1,5 @@
+
+
 ## 动态规划
 
 90% 的字符串问题都可以用动态规划解决，并且90%是采用二维数组。
@@ -8,6 +10,11 @@
 
 动态规划常常适用于有重叠子问题和最优子结构性质的问题，动态规划方法所耗时间往往远少于朴素解法。
 
+**动规的题目，满足以下条件：（一般适合动规的题目所求为：最大、最小、最长、个数）**
+
+- 之前的问题和当前的问题有着关联性，换句话说，之前问题得到的答案可以帮助解决当前问题（规模小的问题能推出规模大的问题）
+- 需要记录之前问题的答案
+
 ```
 最优子结构指的是，问题的最优解包含子问题的最优解。反过来说就是，我们可以通过子问题的最优解，推导出问题的最优解。
 ```
@@ -17,6 +24,10 @@
 1、定义数组元素的含义。
 
 上面说了，我们会用一个数组，来保存历史数组，假设用一维数组 dp[] 吧。这个时候有一个非常非常重要的点，就是规定你这个数组元素dp[i]的含义。一般来说dp[i]直接与所求答案关联。
+
+>求公共串、公共序列的dp定义一般为以xxx为最后一个元素个数
+
+
 
 2、找出数组元素直接的关系式（状态转移方程）
 
@@ -333,3 +344,113 @@ console.log(minDistance("horse", "ros"));
 ```
 
 ![image-20210330142518073](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210330142518073.png)
+
+#### 最大子序和
+
+[leetcode53  最大子序和](https://leetcode-cn.com/problems/maximum-subarray/)
+
+**贪心：**
+
+若当前指针所指元素之前的和小于0，则丢弃当前元素之前的数列，和为当前数值；如果之前的和>0，则继续累加。
+
+一边累加，一遍计算最大值。
+
+```js
+var maxSubArray = function(nums) {
+    let ans = nums[0];
+    let sum = 0;
+    for(const num of nums) {
+        if(sum > 0) {
+            sum += num;
+        } else {
+            sum = num;
+        }
+        ans = Math.max(ans, sum);
+    }
+    return ans;
+};
+
+```
+
+![image-20210405092133893](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210405092133893.png)
+
+**动态规划：**
+
+dp[i]的定义：以nums[i]为最后一个元素的最大子序和
+
+我们所求：dp[0]~dp[i]中的最大值
+
+由于dp table关系不是连续的，需要用max记录连续最大值
+
+```js
+var maxSubArray = function (nums) {
+  let len = nums.length;
+  let dp = new Array(len);
+  let max = nums[0];
+  dp[0] = nums[0];
+  for (let i = 1; i < len; i++) {
+    dp[i] = Math.max(dp[i - 1] + nums[i], nums[i]);
+    if (dp[i] > max) {
+      max = dp[i];
+    }
+  }
+  return max;
+};
+```
+
+![image-20210405092117927](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210405092117927.png)
+
+#### 最长公共子序列
+
+#### 最长公共子串
+
+- dp[i] [j] 的定义：以str1[i] str[j]元素为最后一个元素的最长公共子串个数。
+
+- 动态转移方程：dp [i] [j] = str1[i] === str2[j] ? dp[i-1] [j-1] +1 : 0。
+
+  ```
+  如果str1[i] str[j]元素不相等，那么以这俩为最后元素 没有公共子串
+  ```
+
+- 初始化，一个为0 dp为0
+
+```js
+function findStr(str1, str2) {
+  const len1 = str1.length, len2 = str2.length;
+  //dp[i][j] (i,j为下标) 是以str1[i] str[j]元素为最后一个元素的最长子串个数。
+  let dp = new Array(len1);
+  let max = 0;//最长子序列长度
+  let index = 0;
+  for (let i = 0; i < len1; i++) {
+    dp[i] = new Array(len2);
+  }
+  //初始值
+  for (let i = 0; i < len2; i++) {
+    dp[0][i] = 0;
+  }
+  for (let i = 0; i < len1; i++) {
+    dp[i][0] = 0;
+  }
+  for (let i = 1; i < len1; i++) {
+    for (let j = 1; j < len2; j++) {
+      dp[i][j] = str1[i] === str2[j] ? dp[i - 1][j - 1] + 1 : 0;
+      if (dp[i][j] > max) {
+        max = dp[i][j];
+        index = i
+      }
+    }
+  }
+  if (max === 0) {
+    return "";
+  }
+
+  return str1.substr(index - max + 1, max);
+}
+
+
+console.log(findStr("21", "31"));//1
+```
+
+
+
+#### 最长递增子序
