--- a/面试题/真题题目大杂烩.md
+++ b/面试题/真题题目大杂烩.md
@@ -2647,7 +2647,7 @@ patchVnode函数中，进行了几个判断：
 
 **updateChildren**
 
-![image-20210406141117834](C:%5CUsers%5CAsus%5CAppData%5CRoaming%5CTypora%5Ctypora-user-images%5Cimage-20210406141117834.png)
+![image-20210406141117834](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210406141117834.png)
 
 在这个方法中，有两个数组，分别是新旧虚拟DOM树的节点数组；有四个指针，分别指向旧节点数组和新节点数组的头和尾节点，会对这四个指针两两做sameVnode比较，一共有4种比较方式，如果有能匹配上，那么真实的DOM节点就会移动到Vnode相应的位置。
 
