--- a/面试题/真题题目大杂烩.md
+++ b/面试题/真题题目大杂烩.md
@@ -1932,7 +1932,7 @@ history接口有五种模式改变url
 
 ![image-20210406141758418](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210406141758418.png)
 
-![img](https://img-blog.csdnimg.cn/img_convert/4cf5cf49f70dad69bbfde1f1311af582.png)
+![image-20210406142241869](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210406142241869.png)
 
 （4）我们通过DNS解析获取到IP地址后， 需要发起TCP连接请求。 TCP 建立连接需要经历三次握手的过程，首先客户端向服务器发送一个 **SYN 连接请求报文段**和一个随机序号，服务端接收到请求后向客户端发送一个 **SYN ACK报文段**和一个随机序号并且ACK序列号为客户端序列号+1，确认连接请求。客户端接收服务器的确认应答后，进入连接建立的状态，同时向服务器也发送一个 **ACK 确认报文段**，服务器端接收到确认后，也进入连接建立状态，此时双方的连接就建立起来了。
 
@@ -1945,7 +1945,7 @@ history接口有五种模式改变url
 
 
 
-![三次握手.png](https://img-blog.csdnimg.cn/img_convert/75dc3da5603f7f2e528b057a52563948.png)
+![image-20210406142252342](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210406142252342.png)
 
 （5）握手成功后， 浏览器就可以向服务器发送**http**请求了。 **发送HTTP请求的过程就是构建HTTP请求报文并通过TCP协议发送到服务器指定端口(HTTP协议80/8080, HTTPS协议443)**。HTTP请求报文是由三部分组成: 请求行,请求报头和请求正文。
 
@@ -1962,15 +1962,7 @@ history接口有五种模式改变url
 3. 如果服务端也想断开连接了，向客户端发送一个**FIN连接释放报文段**和一个随机序号（第三次挥手）
 4. 客户端接收到服务器消息后，向服务器端发送一个**ACK确认报文段**和一个随机序号，服务器收到消息后，就处于关闭连接了，处于 **CLOSED** 状态（第四次挥手）
 
-![image.png](https://img-blog.csdnimg.cn/img_convert/ae67d93bd25c900cb90fda95d2c443fa.png)
-
-```
-一般来说， ACK 报文的序列号值为对方序列号值+1
-```
-
-
-
-参考资料：
+![image-20210406142306382](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210406142306382.png)参考资料：
 
 [通俗易懂了解TCP三次握手](https://mp.weixin.qq.com/s?__biz=MzAxOTc0NzExNg==&mid=2665513094&idx=1&sn=a2accfc41107ac08d74ec3317995955e&scene=21#wechat_redirect)
 
