--- a/数据结构与算法/动态规划/动态规划.md
+++ b/数据结构与算法/动态规划/动态规划.md
@@ -25,19 +25,19 @@
 
 上面说了，我们会用一个数组，来保存历史数组，假设用一维数组 dp[] 吧。这个时候有一个非常非常重要的点，就是规定你这个数组元素dp[i]的含义。一般来说dp[i]直接与所求答案关联。
 
->求公共串、公共序列的dp定义一般为以xxx为最后一个元素个数
-
-
-
 2、找出数组元素直接的关系式（状态转移方程）
 
 动态规划的题，就是把一个规模比较大的问题分成几个规模比较小的问题，然后由小的问题推导出大的问题。
 
 大部分情况下，dp[i] [j] 和 dp[i-1] [j]、dp[i] [j-1]、dp[i-1] [j-1] 肯定存在某种关系。我们可以从最后一步、倒数第二步等方面入手分析。
 
+>得根据状态转移方程，确认遍历的顺序 例如i从大到小，还是从小到大。
+
 3、找出初始值
 
-动态规划类似于数学归纳法，我们需要知道初始值，才能不断地推下去。一般来说，如果是一维数组，初始值一般为为dp[0] ，dp[1]，dp[2]等；如果是二维数组，一般为dp[0] [0] ，dp[i] [0] (i>=1) ，dp[0] [j] (j>=1)等
+动态规划类似于数学归纳法，我们需要知道初始值，才能不断地推下去。一般来说，如果是一维数组，初始值一般为为dp[0] ，dp[1]，dp[2]等；如果是二维数组，一般为dp[0] [0] ，dp[i] [0] (i>=1) ，dp[0] [j] (j>=1)等。
+
+>初始值的方向看 i j遍历的方向。
 
 **在做题的时候，按照以上三个步骤进行刻意练习，达到融会贯通！**
 
@@ -345,6 +345,46 @@ console.log(minDistance("horse", "ros"));
 
 ![image-20210330142518073](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210330142518073.png)
 
+#### 最长回文子串
+
+1、定义：dp[i] [j]代表下标i 到 下标j 是否形成回文串，值为true 或 false。
+
+我们所求：当dp[i] [j] 为true时，判断长度j-i+1是否大于max，如果>，则记录j-i+1为max，并记录开始下标index = i。答案为s.substr(index,max)。
+
+**注意：需要特判。如果只有一个字符，即max=0 ，return 第一个字符**
+
+2、转移：dp[i] [j] = s[i] === s[j] && dp[i+1] [j-1] 
+
+**注意：i遍历顺序从大到小，j从小到大**
+
+3、初始值：初始化为true
+
+```js
+var longestPalindrome = function (s) {
+  let len = s.length;
+  let max = 0;
+  let index = 0;
+  const dp = new Array(len + 1).fill(true).map(() => new Array(len + 1).fill(true));
+  for (let i = len - 1; i >= 0; i--) {
+    for (let j = i + 1; j < len; j++) {
+      dp[i][j] = s[i] === s[j] && dp[i + 1][j - 1];
+      if (dp[i][j]) {
+        if (j - i + 1 > max) {
+          max = j - i + 1;
+          index = i;
+        }
+      }
+    }
+  }
+  if (max === 0) {
+    return s[0];
+  }
+  return s.substr(index, max);
+};
+
+
+```
+
 #### 最大子序和
 
 [leetcode53  最大子序和](https://leetcode-cn.com/problems/maximum-subarray/)
@@ -402,6 +442,35 @@ var maxSubArray = function (nums) {
 
 #### 最长公共子序列
 
+1、定义：dp[i] [j] 表示 长度i的数组和长度j的数组的最长公共子序列
+
+2、状态转移方程： 
+
+- 如果text1[i--1] === text2[j-1]，dp[i] [j] = dp[i-1] [j-1] + 1
+- 不等，dp[i] [j] = max(dp[i] [j-1],dp[i-1] [j]) 
+
+3、初始化 一个长度为0 公共子序列为0 
+
+```js
+var longestCommonSubsequence = function (text1, text2) {
+  let len1 = text1.length, len2 = text2.length;
+  const dp = new Array(len1 + 1).fill(0).map(() => new Array(len2 + 1).fill(0));
+  for (let i = 1; i <= len1; i++) {
+    for (let j = 1; j <= len2; j++) {
+      if (text1[i - 1] === text2[j - 1]) {
+        dp[i][j] = dp[i - 1][j - 1] + 1;
+      } else {
+        dp[i][j] = Math.max(dp[i][j - 1], dp[i - 1][j]);
+      }
+    }
+  }
+  for (let i = 0; i <= len1; i++) {
+    console.log(dp[i].join(' '));
+  }
+  return dp[len1][len2];
+};
+```
+
 #### 最长公共子串
 
 - dp[i] [j] 的定义：以str1[i] str[j]元素为最后一个元素的最长公共子串个数。
@@ -450,7 +519,5 @@ function findStr(str1, str2) {
 
 console.log(findStr("21", "31"));//1
 ```
-
-
 
 #### 最长递增子序
