增加两栏、三栏布局

--- a/面试题/高频考点.md
+++ b/面试题/高频考点.md
@@ -701,13 +701,9 @@ document.querySelector("input").onclick = function () {
 
 ### 深拷贝浅拷贝
 
-**深拷贝**
- 修改新变量的值不会影响原有变量的值
- 默认情况下基本数据类型都是深拷贝
+深拷贝是将一个对象从内存中完整的拷贝一份出来，开辟一个新的内存空间存放新对象，且**修改新对象不会影响原对象**。
 
-**浅拷贝**
- 修改新变量的值会影响原有变量的值
- 默认情况下引用类型都是浅拷贝
+浅拷贝是创建一个新对象，这个对象有着原始对象属性值的一份拷贝。如果属性是基本类型，拷贝的就是基本类型的值，如果属性是引用类型，拷贝的就是内存地址 ，所以**如果其中一个对象改变了这个地址，就会影响到另一个对象**。
 
 **通过自定义函数实现深拷贝**
 
