--- a/面试题/真题题目大杂烩.md
+++ b/面试题/真题题目大杂烩.md
@@ -2033,7 +2033,9 @@ map和foreach的主要区别：
 
 #### 浏览器缓存机制
 
-浏览器中缓存可分为强缓存和协商缓存，浏览器使用缓存资源有以下几个过程：
+浏览器中缓存可分为强缓存和协商缓存。强缓存的话，它不会向服务器发送请求，而是直接从内存中读取资源。协商缓存，他是会向服务器发送请求，服务器会根据这个请求上面的参数来判断是否命中协商缓存，如果命中协商缓存，就返回304状态码通知浏览器从缓存中读取资源。
+
+浏览器使用缓存资源有以下几个过程：
 
 1）浏览器在加载资源时，先根据这个资源的一些header判断它是否命中强缓存，**强缓存如果命中，浏览器直接从自己的缓存中读取资源，不会发请求到服务器**。
 
@@ -3429,3 +3431,335 @@ flex布局 和 grid布局也可以实现
 #### 介绍一下Grid布局
 
 #### 介绍一下Flex布局
+
+#### 判断数据类型的方法
+
+**基本类型判断**
+
+在 JavaScript 里 使用 typeof 来判断数据类型，只能区分基本类型，即 “ number ” ， “ string ” ， “ undefined ” ， “ boolean ” ， “ object ” 五种。
+
+```js
+typeof '';               // string 有效
+typeof 1;                // number 有效
+typeof true;             // boolean 有效
+typeof undefined;        // undefined 有效
+typeof null;             // object 无效
+typeof [] ;              // object 无效
+typeof new Function();   // function 有效
+typeof new Date();       // object 无效
+typeof new RegExp();     // object 无效
+```
+
+**引用类型判断**
+
+区别对象、数组、函数可以使用Object.prototype.toString.call 方法。判断某个对象值属于哪种内置类型。
+
+```js
+console.log(Object.prototype.toString.call(123))          // [object Number]
+console.log(Object.prototype.toString.call('123'))        // [object String]
+console.log(Object.prototype.toString.call(undefined))    // [object Undefined]
+console.log(Object.prototype.toString.call(true))         // [object Boolean]
+console.log(Object.prototype.toString.call({}))           // [object Object]
+console.log(Object.prototype.toString.call([]))           // [object Array]
+console.log(Object.prototype.toString.call(function(){})) // [object Function]
+console.log(Object.prototype.toString.call(this));        // [object Window]
+```
+
+**对象类型判断**
+
+`instanceof` 运算符也常常用来判断对象类型。用法: 左边的运算数是一个`object`，右边运算数是对象类的名字或者构造函数; 返回`true`或`false`。
+
+```js
+[] instanceof Array; // true
+[] instanceof Object; // true
+[] instanceof RegExp; // false
+new Date instanceof Date; // true
+```
+
+#### Object.prototype.toString的原理
+
+在 Object.prototype.toString 方法被调用时，会执行以下操作：
+
+1. 首先，获取this对象的[[Class]]属性的值。
+2. 其次，将[[Class]]属性的值与字符串"object"进行一个拼接
+3. 最后，返回这个字符串
+
+>- 说一下[[Class]]属性
+
+[[Class]]是一个内部属性，所有的对象都拥有该属性。在规范中，[[Class]]的值是一个字符串值，表明了该对象的类型。
+
+#### typeof null输出什么
+
+输出“object"，为什么？
+
+因为不同的对象在底层都表示为二进制，在Javascript中二进制前三位都为0的话会被判断为Object类型，null的二进制表示全为0，自然前三位也是0，所以执行typeof时会返回"object"。 
+
+>- typeof的原理
+
+#### typeof NaN 的结果是什么？
+
+typeof NaN; // "number"
+
+NaN 意指“不是一个数字”（not a number），NaN 是一个“警戒值”（sentinel value，有特殊用途的常规值），用于指出数字类型中的错误情况。
+
+NaN 是一个特殊值，它和自身不相等，是唯一一个非自反（自反，reflexive，即 x === x 不成立）的值。而 NaN != NaN为 true。
+
+#### typeof的原理
+
+`typeof`原理：不同的对象在底层都表示为二进制，在Javascript中二进制低三位存储其类型信息。
+
+- 000: 对象
+- 010: 浮点数
+- 100：字符串
+- 110： 布尔
+- 1： 整数
+
+#### instanceof的原理
+
+instanceof的原理是通过原型对象去寻找，每一个对象都有一个原型指向原型对象， 这个原型对象上又有一个constructor指向构造函数，判断这个构造函数是否与Instanceof后面的名称相同，如果不相同，那继续寻找这个原型对象的原型，直到原型链的尽头。
+
+如果找到了，就返回true ，如果搜索到原型链尽头了，还找不到就返回false。
+
+```js
+function Foo() {};
+
+console.log(Object instanceof Object); // true
+console.log(Function instanceof Function); // true
+console.log(Function instanceof Object); // true
+
+console.log(Foo instanceof Foo); // false
+console.log(Foo instanceof Object); // true
+console.log(Foo instanceof Function); // true
+
+```
+
+
+
+#### 介绍 js 有哪些内置对象？
+
+#### 介绍一下JavaScript 原型、原型链？原型链有什么特点？
+
+```
+构造函数原型 prototype
+对象原型 __ proto __
+```
+
+```
+回答思路：
+1.构造函数原型
+2.对象原型
+3.原型链
+4.原型链的特点
+```
+
+**构造函数原型：**每一个构造函数的内部都有一个 prototype 属性，这个属性时一个指针，指向另一个对象，这个对象包含了可以由该构造函数的所有实例共享的属性和方法。
+
+**对象原型：**当我们使用构造函数新建一个对象后，在这个对象的内部将包含一个指针，这个指针指向构造函数的 prototype 属性对应的值，这个指针称为对象的原型。
+
+```
+一般来说我们是不应该能够获取到这个值的，但是现在浏览器中都实现了 __proto__ 属性来让我们访问这个属性，但是我们最好不要使用这个属性，因为它不是规范中规定的。ES5 中新增了一个 Object.getPrototypeOf() 方法，我们可以通过这个方法来获取对象的原型。
+```
+
+**原型链**
+
+JS的原型链是指原型与原型层层相连接的过程即为原型链。当我们访问一个对象的属性时，如果这个对象内部不存在这个属性，那么它就会去它的原型对象里找这个属性，这个原型对象又会有自己的原型，于是就这样一直找下去，也就是原型链的概念。原型链的尽头一般来说都是 Object.prototype，然后Object.prototype.__proto _ _为null。
+
+![image-20210407210035841](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210407210035841.png)
+
+#### 0.1 + 0.2 等于多少
+
+0.3000000000000004。不会精确等于0.3。
+
+首先，十进制的0.1和0.2会被转换成二进制的，二进制浮点数表示法并不能精确的表示类似0.1这样的数值，因为浮点数在转化为二进制时，会出现无限循环
+
+```
+0.1 -> 0.0001 1001 1001 1001...(1100循环)
+0.2 -> 0.0011 0011 0011 0011...(0011循环)
+```
+
+两者相加之后得到二进制为再转换为十进制，就成了0.30000000000004。所以在进行算术计算时会产生误差。
+
+**原因：**JavaScript中所有数字包括整数和小数都只有一种类型 — Number。它的实现是使用64位固定长度来表示，也就是标准的 double 双精度浮点数。
+
+这样的存储结构优点是可以归一化处理整数和小数，节省存储空间。
+
+64位比特又可分为三个部分：
+
+- 符号位S：第 1 位是正负数符号位（sign），0代表正数，1代表负数
+- 指数位E：中间的 11 位存储指数（exponent），用来表示次方数
+- 尾数位M：最后的 52 位是尾数（mantissa），超出的部分自动进一舍零
+
+>- 小数如何取整，或保留几位小数
+>- 为什么使用二进制进行存储
+
+#### 小数如何取整，或保留几位小数
+
+可以使用toFixed方法，可把 Number 四舍五入为指定小数位数的数字。
+
+```
+var num = 5.56789;
+var n=num.toFixed(2);
+```
+
+输出：
+
+```
+5.57
+```
+
+#### 为什么使用二进制进行存储数字
+
+1、可以归一化处理整数和小数，节省存储空间。
+
+2、二进制在电路设计中物理上更易实现
+
+#### 页面性能优化
+
+1、代码压缩 
+
+- css代码压缩，使用clean-css对css进行压缩
+
+- js代码压缩，使用uglifyjs-webpack-plugin对js进行压缩
+
+2、非核心代码异步加载异步加载的方式
+
+异步加载的三种方式——async和defer、动态脚本创建
+
+- async属性
+  - 在script上边使用async属性，会异步执行引入的JavaScript。
+  - 如果是多个脚本，该方法不能保证脚本按顺序执行。
+
+- defer属性
+  - 在script上边使用defer属性，会延迟执行引入的JavaScript。
+  - 若果是多个脚本，可以确保设置defer属性的脚本按顺序执行。
+
+- 动态创建script标签
+  - window.onload方法确保页面加载完毕再将script标签插入到DOM中
+
+>- 使用async/defer后的js脚本会阻塞文档的解析吗？
+
+3、利用浏览器缓存
+
+浏览器缓存能够提升页面性能，并且减少服务器压力。
+
+4、使用CDN
+
+5、Gzip压缩
+
+>- CDN它是如何做到加速的？/ CDN的原理
+
+#### 使用async/defer后的js脚本会阻塞文档的解析吗？
+
+defer是在HTML解析完之后才会执行，不会阻塞文档的解析。
+
+而 aysnc 它是加载完成后立即执行，也就是说，设置async属性的js脚本的加载不会阻塞文档的解析，但是他的执行会阻塞文档的解析。
+
+>- 说一下js是如何阻塞文档的解析的
+
+#### CDN它是如何做到加速的？/CDN的原理
+
+在我的认知里，CDN就是由遍布在各个地方的服务器组成，用户访问时，可以访问到距离最近的、状态最好的一个服务器节点，从而实现加速。
+
+CDN的基本思路是尽可能避开互联网上有可能影响数据传输速度和稳定性的环节，使内容传输的更快、更稳定。CDN系统能够实时地根据网络流量和各节点的连接、负载状况以及到用户的距离和响应时间等综合信息将用户的请求重新导向到离用户最近的服务器节点上。其目的是使用户可就近取得所需内容，解决 Internet网络拥挤的状况，提高用户访问网站的响应速度。
+
+我们从过程研究一下CDN的原理，使用CDN后，将经历这些过程
+
+1. 当用户点击网站页面上的URL，经过本地DNS解析，本地DNS会最终将域名的解析权交给CNAME指向的CDN专用DNS服务器。
+
+   ```
+   CNAME：Canonical Name，返回另一个域名，令当前查询域名挑去该域名，多个域名->服务器的映射。
+   ```
+
+2. CDN的DNS服务器将CDN的全局负载均衡设备IP地址返回用户。
+
+3. 用户向CDN的全局负载均衡设备发起URL访问请求。
+
+4. CDN全局负载均衡设备根据用户IP地址，以及用户请求的内容URL，选择一台用户所属区域的区域负载均衡设备，告诉用户向这台设备发起请求。
+
+5. 区域负载均衡设备会为用户选择一台合适的缓存服务器提供服务，选择的依据包括：用户IP地址、URL中携带的内容、服务器当前的负载情况等等，选择最近、有所需内容以及有服务能力的服务器。基于以上这些条件的综合分析之后，区域负载均衡设备会向全局负载均衡设备返回一台缓存服务器的IP地址。
+
+6. 全局负载均衡设备把服务器的IP地址返回给用户
+
+7. 用户向缓存服务器发起请求，缓存服务器响应用户请求，将用户所需内容传送到用户终端。
+
+![image-20210312140151948](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210312140151948.png)
+
+简单来说，非CDN就是用户访问的资源统一像源站服务器请求。
+
+CDN是根据用户IP等情况来选择合适的CDN缓存服务器来获取资源。
+
+#### HTTP和HTTPS的区别
+
+![image-20210408102444801](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210408102444801.png)
+
+HTTP协议采用明文传输信息，存在信息窃听、篡改和劫持的风险。HTTPS比HTTP多了一层TLS/SSL协议，而协议TLS/SSL具有身份验证、信息加密和完整性校验的功能，可以避免此类问题发生。
+
+HTTPS是在HTTP上建立SSL加密层，对传输数据进行加密，是HTTP协议的安全版。
+
+>- 说一下TLS/SSL协议
+
+#### TLS/SSL工作原理
+
+TLS/SSL协议是安全传输层协议。它的基本工作方式是，客户端使用非对称加密与服务器进行通信，实现身份验证并协商对称加密使用的密钥， 然后对称加密算法采用协商密钥对信息以及信息摘要进行加密通信，不同的节点之间采用的对称密钥不同，从而可以保证信息只能通信双方获取。
+
+**对称加密**
+
+对称加密，就是相同的密钥可以用于信息的加密和解密，掌握密钥才能获取信息，能够防止信息窃听。
+
+对称加密的特点是，信息传输1对1，密码的安全是保证信息安全的基础，服务器和 N 个客户端通信，需要维持 N 个密码记录。
+
+**非对称加密**
+
+非对称加密，有常见的RSA算法。算法特点是，密钥成对出现，一般称为公钥(公开)和私钥(保密)，公钥加密的信息只能私钥解开，私钥加密的信息只能公钥解开。
+
+非对称加密的特点是信息传输1对多，服务器只需要维持一个私钥就能够和多个客户端进行加密通信，但服务器发出的信息能够被所有的客户端解密。
+
+#### HTTP状态码
+
+常见的状态码有：
+
+- 200 OK ：表示从客户端发来的请求在服务器端被正常处理了
+
+- 204 No Content ：服务器接收的请求已成功处理，但在返回的响应报文中不含实体的主体部分。
+
+- 3XX(Redirection 重定向状态码)
+
+  ```
+  3XX 响应结果表明浏览器需要执行某些特殊的处理以正确处理请求
+  ```
+
+  - 301 Moved Permanently 永久性重定向。该状态码表示请求的资源已被分配了新的 URI，以后应使用资源现在所指的 URI。也就是说，如果已经把资源对应的 URI 保存为书签了，这时应该按 Location 首部字段提示的 URI 重新保存。
+  - 302 Found 临时性重定向。该状态码表示请求的资源已被分配了新的 URI，希望用户(本次)能使用新的 URI 访问。 和 301 Moved Permanently 状态码相似，但 302 状态码代表的资源不是被永久移动，只是临时性质的。换句话说，已移动的资源对应的 URI 将来还有可能发生改变。比如，用户把 URI 保存成书签，但不会像 301 状态码出现时那样去更新书签，而是仍旧保留返回 302 状态码的页面对应的 URI。
+  - 304 Not Modified 命中协商缓存。该状态码表示客户端发送附带条件的请求时，服务器端允许请求访问资源，但未满足条件的情况。304 状态码返回时，不包含任何响应的主体部分。304 虽 然被划分在 3XX 类别中，但是和重定向没有关系。
+
+- 4XX(Client Error 客户端错误状态码)
+
+  - 400 Bad Request 该状态码表示请求报文中存在语法错误。当错误发生时，需修改请求的内容后再次发送请求。另外，浏览器会像 200 OK 一样对待该状态码。
+  - 401 Unauthorized 
+  - 403 Forbidden 该状态码表明对请求资源的访问被服务器拒绝了。
+  - 404 Not Found 该状态码表明服务器上无法找到请求的资源。
+
+- 5XX(Server Error 服务器错误状态码)
+
+#### HTTP的请求方式，Get和Post的区别
+
+- 从**缓存**的角度，GET 请求会被浏览器主动缓存下来，留下历史记录，而 POST 默认不会。
+
+- 从**编码**的角度，GET 只能进行 URL 编码，只能接收 ASCII 字符，而 POST 没有限制。
+
+- 从**参数**的角度，GET 一般放在 URL 中，因此不安全，POST 放在请求体中，更适合传输敏感信息。
+
+#### 如何理解 HTTP 代理？
+
+我们知道在 HTTP 是基于`请求-响应`模型的协议，一般由客户端发请求，服务器来进行响应。
+
+另一种情况是，代理服务器的情况。引入代理之后，作为代理的服务器相当于一个中间人的角色，对于客户端而言，表现为服务器进行响应；而对于源服务器，表现为客户端发起请求。
+
+那代理服务器的好处：
+
+1. **负载均衡**。例如一个网站的内容被部署在若干台服务器上，可以把这些机子看成一个集群，那么代理服务器可以将接收到的客户端请求“均匀地”分配到这个集群中所有的服务器上，从而实现服务器压力的负载均衡。
+2. 安全稳定。
+   - 使用带服务器后，用户端将无法直接通过请求访问真正的内容服务器，而必须首先通过代理服务器。可以通过在代理服务器上将危险或者没有权限的请求内容过滤掉，从而保证了服务器的安全。
+   - 利用心跳机制监控后台的服务器，一旦发现故障机就将其踢出集群。以后代理进来的客户端请求都不会被发送到该服务器上，从而保证客户端访问的稳定性。
+
+#### HTTP1.0和HTTP1.1的区别
